# loom

./: .gitignore  README.md  pyproject.toml
src/blueprint_parser/: __init__.py  parser.py  schema.py
src/loom/: __init__.py  __main__.py  main.py
tests/: test_blueprint_parser.py  test_main.py
